[package]
name = "UnityPackageDefeater"
version = "0.1.0"
edition = "2024"

[dependencies]
flate2 = { version = "1", features = ["zlib"] }
tar = "0.4"
anyhow = "1"
clap = { version = "4.6.1", features = ["derive"] }
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_UI_Shell",
] }